# FoxRoom

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
FoxChat/: config.json
include/: base.h  imgui_hook.h
include/fox/: chat_interfaces.h  chat_room.h  font_manager.h  music_playlist.h  settings_store.h  text_chat.h  text_chat_stub.h  theme_manager.h  transport_stub.h  voice_chat.h  winsock_transport.h
src/: imgui_hook.cpp
src/fox/: chat_room.cpp  font_manager.cpp  music_playlist.cpp  settings_store.cpp  text_chat.cpp  theme_manager.cpp  voice_chat.cpp  winsock_transport.cpp
